--- a/templates/auth/welcomEmail.html
+++ b/templates/auth/welcomEmail.html
@@ -149,7 +149,7 @@
                   style="display: inline-block"
                 >
                   <img
-                    src="https://capital-profit.org/assets/images/logoIcon/logoi.png"
+                    src="https://capitalprofit.org/assets/images/logoIcon/logoi.png"
                     alt="Logo"
                     border="0"
                     width="150"
@@ -258,7 +258,7 @@
                             style="border-radius: 6px"
                           >
                             <a
-                              href="https://capital-profit.org/"
+                              href="https://capitalprofit.org/"
                               target="_blank"
                               rel="noopener noreferrer"
                               style="
