--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,5 @@
 {% extends "layouts/home.html" %}
-<!---->{% block title %} ទាក់ទង​មក​ពួក​យើង {% endblock title %}<!---->
+<!---->{% block title %} Contact us {% endblock title %}<!---->
 {% block content %}
 
 <div class="inner-banner-area">
@@ -7,7 +7,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-        <h1 class="title"><span> ទាក់ទង​មក​ពួក​យើង </span></h1>
+        <h1 class="title"><span>Contact Us</span></h1>
       </div>
     </div>
   </div>
@@ -21,15 +21,15 @@
           <div class="row">
             <div class="col-lg-8">
               <div class="contact-form-area">
-                <h3 class="section-title">ទាក់ទងជាមួយយើង</h3>
-                <p>អ្នកអាចទាក់ទងមកយើង យើងតែងតែមានសម្រាប់អ្នក។</p>
+                <h3 class="section-title">Contact With Us</h3>
+                <p>You can contact us, We are always available for you.</p>
                 <form method="post" action="#">
                   <div class="row">
                     <div class="col-md-12">
                       <input
                         name="name"
                         type="text"
-                        placeholder="ឈ្មោះ​របស់​អ្នក"
+                        placeholder="Your Name"
                         class="form-control"
                         value=""
                         required
@@ -39,7 +39,7 @@
                       <input
                         name="email"
                         type="text"
-                        placeholder="បញ្ចូលអាសយដ្ឋានអ៊ីមែល"
+                        placeholder="Enter E-Mail Address"
                         class="form-control"
                         value=""
                         required
@@ -50,7 +50,7 @@
                       <input
                         name="subject"
                         type="text"
-                        placeholder="សរសេរប្រធានបទរបស់អ្នក។"
+                        placeholder="Write your subject"
                         class="form-control"
                         value=""
                         required
@@ -60,13 +60,13 @@
                   <textarea
                     name="message"
                     wrap="off"
-                    placeholder="សរសេរសាររបស់អ្នក។"
+                    placeholder="Write your message"
                     class="form-control"
                   ></textarea>
                   <input
                     disabled
                     type="submit"
-                    value="ប្រើការគាំទ្រផ្ទាល់"
+                    value="Use the live support"
                     class="btn btn-default website-color btn-lg mt-3"
                   />
                 </form>
@@ -74,11 +74,13 @@
             </div>
             <div class="col-lg-4">
               <div class="contact-social-area">
-                <h3 class="section-title">ទំនាក់ទំនង</h3>
+                <h3 class="section-title">Contact</h3>
                 <div class="mail-area">
                   <span class="support">
                     <i class="fas fa-phone"></i>
-                    <a href="tel:សូមទាក់ទងផ្នែកជំនួយ"> សូមទាក់ទងផ្នែកជំនួយ </a>
+                    <a href="tel:PLEASE CONTACT SUPPORT">
+                      PLEASE CONTACT SUPPORT
+                    </a>
                   </span>
 
                   <span class="support mt-1">
@@ -93,7 +95,7 @@
                     >
                   </span>
                 </div>
-                <h3 class="section-title">តាម​ពួក​យើង</h3>
+                <h3 class="section-title">Follow Us</h3>
                 <ul class="social-links">
                   <li>
                     <a href="#" target="_blank" title="Linkedin"
