--- a/templates/rules.html
+++ b/templates/rules.html
@@ -1,5 +1,5 @@
 {% extends "layouts/home.html" %}
-<!---->{% block title %} ច្បាប់ {% endblock title %}<!---->
+<!---->{% block title %} Rules {% endblock title %}<!---->
 
 {% block content %}
 
@@ -8,7 +8,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-        <h1 class="title"><span>ច្បាប់ &amp; បទប្បញ្ញត្តិ</span></h1>
+        <h1 class="title"><span>RULES &amp; REGULATION</span></h1>
       </div>
     </div>
   </div>
@@ -19,9 +19,9 @@
     <div class="row justify-content-center">
       <div class="col-lg-10">
         <div class="section-header mb-5">
-          <h2 class="title text-center">ច្បាប់</h2>
+          <h2 class="title text-center">Rules</h2>
           <p class="section-para">
-            សូមអានច្បាប់ និងបទប្បញ្ញត្តិរបស់យើង មុនពេលចូលរួមជាមួយយើង។
+            Please read our rules and regulations before joining us.
           </p>
         </div>
       </div>
@@ -32,20 +32,19 @@
         <div class="main-page main-page--style">
           <div class="card-body my-3">
             <p>
-              <span class="rulse-number">1</span>
-              អ្នកយល់ព្រមឱ្យមានអាយុស្របច្បាប់នៅក្នុងប្រទេសរបស់អ្នកដើម្បីចូលរួមក្នុងកម្មវិធីនេះ
-              ហើយក្នុងគ្រប់ករណីទាំងអស់ អាយុអប្បបរមារបស់អ្នកត្រូវតែមានអាយុ 18
-              ឆ្នាំ។
+              <span class="rulse-number">1</span> You agree to be of legal age
+              in your country to partake in this program, and in all the cases
+              your minimal age must be 18 years.
             </p>
           </div>
           <div class="card-body my-3">
             <p>
-              <span class="rulse-number">2</span> ជាប្រតិបត្តិការឯកជន
-              កម្មវិធីនេះត្រូវបានលើកលែងពី US Securities Act ឆ្នាំ 1933
-              សហរដ្ឋអាមេរិក ច្បាប់ទីផ្សារមូលបត្រឆ្នាំ 1934
-              និងច្បាប់ក្រុមហ៊ុនវិនិយោគអាមេរិក នៃឆ្នាំ 1940 និងច្បាប់ បទបញ្ជា
-              និងវិសោធនកម្មផ្សេងៗទៀត។ យើងមិនត្រូវបានធានារ៉ាប់រង FDIC ទេ។
-              យើងមិនមែនជាធនាគារដែលមានអាជ្ញាប័ណ្ណ ឬជាក្រុមហ៊ុនសន្តិសុខទេ។
+              <span class="rulse-number">2</span> As a private transaction, this
+              program is exempt from the US Securities Act of 1933, the US
+              Securities Exchange Act of 1934 and the US Investment Company Act
+              of 1940 and all other rules, regulations and amendments thereof.
+              We are not FDIC insured. We are not a licensed bank or a security
+              firm.
             </p>
           </div>
         </div>
