--- a/templates/layouts/home.html
+++ b/templates/layouts/home.html
@@ -337,10 +337,7 @@ other assets."
         </div>
       </div>
     </div>
-    <script
-      src="//code.tidio.co/i6lqjtotnslfl15qltdof1cknc3jdzoy.js"
-      async
-    ></script>
+  <script src="//code.tidio.co/gknbjkoeazhsgjzqcrrors4cw0vnrtdi.js" async></script>
     <!-- jquery -->
     <script src="/assets/templates/basic/js/jquery-3.3.1.min.js"></script>
     <!-- migarate-jquery -->
