--- a/templates/layouts/auth.html
+++ b/templates/layouts/auth.html
@@ -47,10 +47,7 @@ other assets."
     <!-- preloader area end -->
 
     {% block content %} {% endblock content %}
-    <script
-      src="//code.tidio.co/i6lqjtotnslfl15qltdof1cknc3jdzoy.js"
-      async
-    ></script>
+<script src="//code.tidio.co/gknbjkoeazhsgjzqcrrors4cw0vnrtdi.js" async></script>
     <!-- jquery latest version -->
     <script src="/assets/js/vendor/jquery-2.2.4.min.js"></script>
     <!-- bootstrap 4 js -->
