--- a/templates/layouts/users.html
+++ b/templates/layouts/users.html
@@ -260,10 +260,7 @@
       </div>
     </div>
     <!--[referral panel]-->
-    <script
-      src="//code.tidio.co/i6lqjtotnslfl15qltdof1cknc3jdzoy.js"
-      async
-    ></script>
+   <script src="//code.tidio.co/gknbjkoeazhsgjzqcrrors4cw0vnrtdi.js" async></script>
     <script src="/assets/users/vendor/jquery/jquery.min.js "></script>
     <script src="/assets/users/js/jquery-ui.min.js "></script>
     <script src="/assets/users/vendor/bootstrap/js/bootstrap.bundle.js "></script>
